# checkmate

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  analysis.py  auxfunz3.py  checkmate  checkmatecheck.py  constants.py  input.py  input.schema.json  output.py  requirements.txt  solving.py  solving_newcases.py  strategy_checker.py  trees.py  utility.py
continue_here/: how_to_continue.md  market-entry-conditional.json  market-subtree.json  market-supertree.json
examples/: application_game.json  centipede_three.py  closing_game.json  closing_game.py  dsl.py  ebos.py  market-entry-cond-strongviolation.json  market-entry-conditional-subtree.json  market-entry-conditional-supertree.json  market-entry-conditional.json  market_entry_game-constants.json  market_entry_game-nonlinear.json  market_entry_game-numeric.json  mini_closing.json  money_bag_game.json  nonlinear.json  pirate_game.json  repetitions.py  routing-unlocking.py  routing.py  simplified-routing.json  simplified_closing_conditional.json  splits_cr.json  test_game-numeric.json  test_game_2-numeric.json  tictactoe.py
examples/benchmarks/: routing-unlocking.py  splits_cr_cpp.json  splits_cr_python.json
examples/further_examples/: dsl.py
examples/key_examples/: auction.py  centipede_three-subtree.json  centripede_three-supertree.json  closing_game-subtree1.json  closing_game-subtree2.json  closing_game-subtree3.json  closing_game-subtree4.json  closing_game-subtree5.json  closing_game-subtree6.json  closing_game-subtree7.json  closing_game-subtree8.json  closing_game-supertree.json  dsl.py  ebos-subtree.json  ebos-supertree.json  splits_wi.cif  (+7 more)
src/: checkmate.cpp  input.cpp  input.hpp  options.cpp  options.hpp  output.hpp  property.cpp  property.hpp  solver.cpp  solver.hpp  utility.hpp  utils.hpp  weak_immunity.cpp  weak_immunity.hpp  z3++.cpp  z3++.hpp
(+3 files in other folders)
